--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,10 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <h1>Lasagna</h1>
 </head>
 <a href="../index.html">Home</a>
-<img src="https://www.bonappetit.com/recipe/ba-best-lasagna?srsltid=AfmBOoq3cQerkNVKHIy4TXG_aK2EiCDABvwiP9Mx2xEifvr7DShIsnKX" alt="lasagna">
+<img src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Lasagna.jpg" alt="lasagna">
 <body>
     Lasagna is a classic Italian baked dish consisting of wide, flat pasta sheets layered with ragù (meat and tomato sauce), béchamel sauce, cheeses like mozzarella, parmesan, or ricotta, and seasonings. Originating in Naples, this "al forno" (oven-baked) casserole is known for its rich, layered structure and is often finished with a crispy top layer of cheese.
 </body>
