--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <h1>Lasagna</h1>
+    <title>Lasagna</title>
 </head>
 <a href="../index.html">Home</a>
 <img src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Lasagna.jpg" alt="lasagna">
@@ -11,7 +11,8 @@
     Lasagna is a classic Italian baked dish consisting of wide, flat pasta sheets layered with ragù (meat and tomato sauce), béchamel sauce, cheeses like mozzarella, parmesan, or ricotta, and seasonings. Originating in Naples, this "al forno" (oven-baked) casserole is known for its rich, layered structure and is often finished with a crispy top layer of cheese.
 </body>
 <h2>Ingredients</h2>
-<ol>500g beef mince,
+<ul>
+500g beef mince,
 1 onion,
 2 cloves garlic,
 1 can (400g) crushed or diced tomatoes,
@@ -25,10 +26,12 @@ olive oil,
 1 cup grated mozzarella,
 ½ cup grated parmesan,
 1 egg optional,
-lasagna sheets</ol>
+lasagna sheets
+</ul>
 
-<h1>Steps</h1>
-<ul>1, Preheat oven to 180°C
+<h2>Steps</h2>
+<ol>
+1, Preheat oven to 180°C
 
 2, Heat olive oil in a pan, cook onion until soft
 
@@ -53,4 +56,5 @@ lasagna sheets</ol>
 12, Bake 30 minutes until golden and bubbling
 
 13, Rest 10 minutes before slicing
- </ul>
+</ol> 
+</html>
